# chess-explainable

./: .env.example  .gitignore  README.md  game.pgn  pyproject.toml
app/: __init__.py  config.py  engine_service.py  main.py  position.py  schemas.py  slm.py  tagger.py
app/static/: index.html
tests/: test_api.py  test_curls.txt  test_tagger.py
